@startuml Diagrama de Clases Vista
skinparam classAttributeIconSize 0

package Vista {
    class AlgoKahootView
    class App
    class ContenedorBienvenidos
    class ContenedorEntreRondas
    class ContenedorEnunciado
    class ContenedorJugadores
    class ContenedorPodio
    class ContenedorPreguntaVF
    class ContenedorPreguntaMC
    class ContenedorPreguntaOC
    class ContenedorPreguntaGC
    class ContenedorPrincipal
    class ContenedorRespuestas
    class FactoryBackgrounds
}

'Ordenamiento De Cuadrados

'Herencia --|> cumple la relación 'es un'

'Asociacion --> un objeto guarda a otro

'Agregacion --o un objeto esta compuesto por otro pero no lo necesita para vivir

'Composicion --* un objeto es dueño de otro

'Dependencia ..> un objeto utiliza a otro porque lo recibe/devuelve
AlgoKahootView .left.> ContenedorPodio
AlgoKahootView ..> ContenedorEntreRondas
AlgoKahootView ..> ContenedorEnunciado
AlgoKahootView ..> ContenedorPrincipal
AlgoKahootView ..> ContenedorRespuestas
AlgoKahootView .right.> FactoryBackgrounds
App .up.> ContenedorJugadores
App ..> FactoryBackgrounds
App .left.> ContenedorBienvenidos
App ..> AlgoKahootView
ContenedorPrincipal ..> ContenedorPreguntaVF
ContenedorPrincipal ..> ContenedorPreguntaMC
ContenedorPrincipal ..> ContenedorPreguntaOC
ContenedorPrincipal ..> ContenedorPreguntaGC

'Interfaces ..|> colección de declaraciones de métodos sin implemetnar

@enduml